rabbitmq config done

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/OpulentCart/Product-Service#readme",
   "dependencies": {
+    "@pinecone-database/pinecone": "^5.1.0",
     "amqplib": "^0.10.5",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
